fix – tweak to site title alignment. Mainly reducing padding on mobile

--- a/src/scss/regions/_headers.scss
+++ b/src/scss/regions/_headers.scss
@@ -13,8 +13,10 @@
   a {
     background-size: $spacer * 2 $spacer * 2 !important;
     color: $utsmokey;
-    // padding: 0 0 $spacer calc($spacer * 4.1);
-    padding: $spacer 0 $spacer calc($spacer * 4.1);
+    padding: calc($spacer * 0.25) 0 calc($spacer * 0.5) calc($spacer * 4.1);
+    @media screen and (min-width: 800px) {
+      padding: $spacer 0 $spacer calc($spacer * 4.1);
+    }
     background-position: center center;
     background-size: 3rem;
     text-decoration: none;
